feat: add packages

--- a/catalog_service/package.json
+++ b/catalog_service/package.json
@@ -12,5 +12,8 @@
   "dependencies": {
     "express": "^4.19.2",
     "nodemon": "^3.1.0"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21"
   }
 }
